<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ncl.team20.seatonvalley.activities.SettingsActivity"
    tools:showIn="@layout/app_bar_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            tools:ignore="InefficientWeight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"

                    android:paddingStart="8dp"
                    android:text="@string/notifications"
                    android:textAlignment="textStart"
                    android:textColor="@color/tw__composer_black"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    tools:ignore="RtlSymmetry" />

                <Switch
                    android:id="@+id/toggle_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="8dp"
                    android:text="@string/get_notifications_from_seaton_valley_council"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingStart="8dp"
                    android:text="@string/number_of_posts_to_display"
                    android:textAlignment="textStart"
                    android:textColor="@color/tw__composer_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:paddingStart="8dp"
                        android:text="@string/news"
                        android:textAlignment="textStart"
                        android:textColor="@color/tw__composer_black"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                    <Spinner
                        android:id="@+id/news_to_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:entries="@array/posts_array"
                        android:padding="0dp"
                        android:paddingStart="8dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="top"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:paddingStart="8dp"
                        android:text="@string/events"
                        android:textAlignment="textStart"
                        android:textColor="@color/tw__composer_black"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry" />

                    <Spinner
                        android:id="@+id/events_to_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:entries="@array/posts_array"
                        android:padding="0dp"
                        android:paddingStart="8dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginTop="1dp"

                    android:paddingStart="8dp"
                    android:text="@string/storage"
                    android:textAlignment="textStart"
                    android:textColor="@color/tw__composer_black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/clear_cache_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/clear_cache"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="0"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0"
                        android:background="@android:color/darker_gray"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"

                        android:paddingStart="8dp"
                        android:text="@string/seaton_valley_council_app_version"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/tw__composer_black"
                        android:textSize="12sp"
                        tools:ignore="InefficientWeight,RtlSymmetry" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
